welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: not found: type int
def suiteGolomb (num:int) {
                     ^